--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style>.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>THE FIRST</title>
   </head>
   <body>
-    <p>Hello!</p>
+    <h1>IK HEB HONGER!</h1>
+    <p>a</p>
   </body>
 </html>
