--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>THE FIRST</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Industrie</a></li>
+        <li><a href="#">Ruimtevaart</a></li>
+        <li><a href="#">Geneeskunde</a></li>
+      </ul>
+    </nav>
     <header>
       The life of Benjamin Witts
     </header>
