--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
       </ul>
     </nav>
     <h1>IK HEB HONGER!</h1>
-    <p>a</p>
+    <section>
+      <article>
+        <h1>DIT WOORD LEUK!</h1>
+        <p>
+          Eten is suuuuuuuuuuuuuuper lekker en zla ik zo weer doen!
+        </p>
+        <p>
+          maaar waarom?
+        </p>
+        <p>
+          kweenie!
+        </p>
+      </article>
+    </section>
+    <footer>
+      <h3>made by JAN...</h3>
+    </footer>
   </body>
 </html>
