--- a/index.html
+++ b/index.html
@@ -6,34 +6,36 @@
     <title>THE FIRST</title>
   </head>
   <body>
-    <header>
-      The life of Benjamin Witts
-    </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Industrie</a></li>
-        <li><a href="#">Ruimtevaart</a></li>
-        <li><a href="#">Geneeskunde</a></li>
-      </ul>
-    </nav>
-    <h1>IK HEB HONGER!</h1>
-    <section>
-      <article>
-        <h1>DIT WOORD LEUK!</h1>
-        <p>
-          Eten is suuuuuuuuuuuuuuper lekker en zla ik zo weer doen!
-        </p>
-        <p>
-          maaar waarom?
-        </p>
-        <p>
-          kweenie!
-        </p>
-      </article>
-    </section>
-    <footer>
-      <h3>made by JAN...</h3>
-    </footer>
+    <div class="wrapper">
+      <header>
+        The life of Benjamin Witts
+      </header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Industrie</a></li>
+          <li><a href="#">Ruimtevaart</a></li>
+          <li><a href="#">Geneeskunde</a></li>
+        </ul>
+      </nav>
+      <h1>IK HEB HONGER!</h1>
+      <section>
+        <article>
+          <h1>DIT WOORD LEUK!</h1>
+          <p>
+            jarg!
+          </p>
+          <p>
+            maaar waarom?
+          </p>
+          <p>
+            kweenie!
+          </p>
+        </article>
+      </section>
+      <footer>
+        <h3>made by JAN...</h3>
+      </footer>
+    </div>
   </body>
 </html>
